# GraphColoring

./: .gitignore  CMakeLists.txt  build.sh  main.cpp  run.sh  test.sh
GraphGenerator/: generator.py
inputs/: sample2.txt  sample3.txt  sample4.txt  sample5.txt  sample6.txt  sudoku.txt
